<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_ab_create_new_folder" android:id="@id/menu_new_folder" android:orderInCategory="100" android:title="@string/menu_new" app:showAsAction="never" />
    <item android:icon="@drawable/ic_ab_search" android:id="@id/menu_search" android:orderInCategory="100" android:title="@string/menu_search" app:actionLayout="@layout/view_search" app:showAsAction="ifRoom|collapseActionView" />
    <item android:icon="@drawable/ic_ab_settings" android:id="@id/menu_view_settings" android:orderInCategory="150" android:title="@string/menu_view_settings" app:showAsAction="never" />
    <item android:icon="@drawable/ic_ab_refresh" android:id="@id/menu_refresh" android:orderInCategory="200" android:title="@string/menu_refresh" app:showAsAction="never" />
</menu>