<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layoutDirection="ltr"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/control_progress_line" android:background="@color/actionbar_overlay" android:paddingLeft="14.0dip" android:paddingTop="4.0dip" android:paddingRight="14.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@id/exo_position" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:includeFontPadding="false" />
        <View android:id="@id/exo_progress_placeholder" android:layout_width="0.0dip" android:layout_height="36.0dip" android:layout_weight="1.0" />
        <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@id/exo_duration" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:includeFontPadding="false" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/control_buttons_line0" android:paddingTop="4.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageButton android:id="@id/custom_unlock" android:layout_width="80.0dip" android:layout_height="60.0dip" android:contentDescription="@string/menu_unlock" app:srcCompat="@drawable/ic_unlock_circle" style="@style/ExoMediaButton" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/control_buttons_line1" android:background="@color/actionbar_overlay" android:paddingTop="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageButton android:id="@id/custom_subtitles" android:contentDescription="@string/subtitles" app:srcCompat="@drawable/ic_subtitles_on" style="@style/ExoMediaButton" />
        <ImageButton android:id="@id/exo_rew" android:contentDescription="@string/exo_controls_rewind_description" app:srcCompat="@drawable/ic_rewind_10" style="@style/ExoMediaButton" />
        <androidx.appcompat.widget.MySpinner android:id="@id/custom_speed" android:contentDescription="@string/playback_speed" style="@style/ExoMediaButton" />
        <ImageButton android:id="@id/exo_ffwd" android:contentDescription="@string/exo_controls_fastforward_description" app:srcCompat="@drawable/ic_forward_10" style="@style/ExoMediaButton" />
        <ImageButton android:id="@id/custom_repeat_toggle" style="@style/ExoMediaButton" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/control_buttons_line2" android:background="@color/actionbar_overlay" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageButton android:id="@id/custom_lock" android:contentDescription="@string/menu_lock" app:srcCompat="@drawable/ic_lock" style="@style/ExoMediaButton" />
        <ImageButton android:id="@id/custom_prev" style="@style/ExoMediaButton.Previous" />
        <ImageButton android:id="@id/exo_play" android:contentDescription="@string/exo_controls_play_description" app:srcCompat="@drawable/ic_play_arrow_44" style="@style/ExoMediaButton" />
        <ImageButton android:id="@id/exo_pause" android:contentDescription="@string/exo_controls_pause_description" app:srcCompat="@drawable/ic_pause_44" style="@style/ExoMediaButton" />
        <ImageButton android:id="@id/custom_next" style="@style/ExoMediaButton.Next" />
        <ImageButton android:id="@id/exo_vr" style="@style/ExoMediaButton.VR" />
        <ImageButton android:id="@id/custom_more" android:contentDescription="@string/menu_expand" app:srcCompat="@drawable/ic_expand_more_bottom" style="@style/ExoMediaButton" />
        <ImageButton android:id="@id/custom_less" android:contentDescription="@string/menu_collapse" app:srcCompat="@drawable/ic_expand_less_bottom" style="@style/ExoMediaButton" />
    </LinearLayout>
</LinearLayout>