<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/Widget.AlertDialog"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textColor="@color/main_primary_text" android:linksClickable="true" android:id="@id/content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_gdpr_consent_content" />
        <TextView android:textColor="@color/accent_color" android:id="@id/learn_more" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/dialog_gdpr_learn_more" />
        <Button android:id="@id/agree" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/button_gdpr_agree" style="@style/Widget.AppCompat.Button.Colored" />
        <Button android:textSize="12.0sp" android:textColor="@color/main_secondary_text" android:id="@id/disagree" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/button_gdpr_disagree" android:fontFamily="sans-serif" style="@style/Widget.AppCompat.Button.Borderless" />
    </LinearLayout>
</ScrollView>