<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/Widget.AlertDialog.Less.NoButton"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/message" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <LinearLayout android:orientation="horizontal" android:id="@id/info_container" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/info_new" android:background="@color/overwrite_file_background" android:paddingLeft="4.0dip" android:paddingTop="2.0dip" android:paddingRight="4.0dip" android:paddingBottom="2.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="2.0dip" android:layout_weight="1.0" />
            <TextView android:id="@id/info_old" android:background="@color/overwrite_file_background" android:paddingLeft="4.0dip" android:paddingTop="2.0dip" android:paddingRight="4.0dip" android:paddingBottom="2.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </LinearLayout>
        <RelativeLayout android:id="@id/apply_all_container" android:paddingLeft="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="6.0dip" android:paddingStart="8.0dip">
            <CheckBox android:id="@id/overwrite_file_dialog_cb_apply_to_all" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/label_apply_to_all" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_button_apply_to_all" android:layout_toLeftOf="@id/overwrite_file_dialog_cb_apply_to_all" android:layout_centerVertical="true" />
        </RelativeLayout>
        <Button android:id="@id/btn_overwrite" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_button_overwrite" style="@style/Widget.AppCompat.Button.Colored" />
        <Button android:id="@id/btn_rename" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_button_rename" style="@style/Widget.AppCompat.Button.Colored" />
        <Button android:id="@id/btn_skip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_button_skip" style="@style/Widget.AppCompat.Button.Colored" />
        <Button android:id="@id/btn_cancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_button_cancel" style="@style/Widget.AppCompat.Button" />
    </LinearLayout>
</ScrollView>