<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@color/main_background" android:focusable="false" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:importantForAccessibility="no"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/layout_step1" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <View android:id="@id/step1centerview" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_centerInParent="true" />
        <LinearLayout android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_above="@id/step1centerview" android:layout_centerHorizontal="true">
            <ImageView android:layout_gravity="center" android:layout_width="64.0dip" android:layout_height="64.0dip" app:srcCompat="@mipmap/ic_launcher_foreground" />
            <TextView android:textSize="30.0sp" android:textColor="@color/main_primary_text" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="64.0dip" android:text="@string/app_name" />
        </LinearLayout>
        <TextView android:textSize="18.0sp" android:textColor="@color/main_secondary_text" android:id="@id/privacy_policy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/privacy_policy" android:layout_below="@id/step1centerview" android:layout_centerHorizontal="true" />
        <Button android:textSize="18.0sp" android:id="@id/step1_next" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:text="@string/button_next" android:layout_alignParentBottom="true" style="@style/Widget.AppCompat.Button.Colored" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/layout_step2" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <View android:id="@id/step2centerview" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_centerInParent="true" />
        <ImageView android:layout_width="64.0dip" android:layout_height="64.0dip" android:layout_marginTop="10.0dip" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" app:srcCompat="@mipmap/ic_launcher_foreground" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/main_secondary_text" android:id="@id/step2description" android:padding="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/request_storage_permissions" android:layout_above="@id/step2centerview" android:layout_centerHorizontal="true" />
        <TextView android:textSize="30.0sp" android:textColor="@color/main_primary_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_access_request" android:layout_above="@id/step2description" android:layout_centerHorizontal="true" />
        <Button android:textSize="18.0sp" android:id="@id/step2_next" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:text="@string/button_next" android:layout_alignParentBottom="true" style="@style/Widget.AppCompat.Button.Colored" />
    </RelativeLayout>
</FrameLayout>