<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/playback_controls_background" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ProgressBar android:layout_gravity="center" android:id="@id/play_progress" android:background="@color/playback_controls_progress_background" android:layout_width="fill_parent" android:layout_height="@dimen/control_fragment_progress_thickness" android:progressDrawable="@drawable/progresss_playback_controls" style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal" />
    <ImageView android:id="@id/album_art" android:layout_width="@dimen/control_fragment_icon_size" android:layout_height="@dimen/control_fragment_icon_size" android:layout_marginTop="@dimen/control_fragment_progress_thickness" android:scaleType="centerCrop" android:layout_alignParentLeft="true" android:contentDescription="@string/currently_playing_song" android:layout_alignParentStart="true" />
    <ProgressBar android:id="@id/progress" android:padding="16.0dip" android:visibility="gone" android:layout_width="@dimen/control_fragment_icon_size" android:layout_height="@dimen/control_fragment_icon_size" android:layout_marginTop="@dimen/control_fragment_progress_thickness" style="@style/Base.Widget.AppCompat.ProgressBar" />
    <LinearLayout android:orientation="vertical" android:id="@id/content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/playback_controls_albumart_horizontal_margin" android:layout_marginTop="@dimen/control_fragment_progress_thickness" android:layout_toLeftOf="@id/play_pause" android:layout_toRightOf="@id/album_art" android:layout_centerVertical="true" android:layout_marginStart="@dimen/playback_controls_albumart_horizontal_margin" android:layout_toStartOf="@id/play_pause" android:layout_toEndOf="@id/album_art">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/playback_controls_primary_color" android:ellipsize="marquee" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:marqueeRepeatLimit="1" android:contentDescription="@string/currently_playing_song" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/playback_controls_secondary_color" android:ellipsize="end" android:id="@id/artist" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:contentDescription="@string/currently_playing_artist" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/playback_controls_secondary_color" android:ellipsize="end" android:id="@id/extra_info" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:contentDescription="@string/currently_playing_extra_info" />
    </LinearLayout>
    <ImageButton android:id="@id/play_pause" android:background="@drawable/bg_transparent_dark_background" android:padding="8.0dip" android:layout_width="52.0dip" android:layout_height="52.0dip" android:layout_marginTop="@dimen/control_fragment_progress_thickness" android:tint="@android:color/white" android:layout_toLeftOf="@id/stop" android:layout_centerVertical="true" android:layout_alignWithParentIfMissing="true" android:contentDescription="@string/playback_stop_description" android:layout_toStartOf="@id/stop" android:tintMode="src_in" app:srcCompat="@drawable/ic_play_arrow" />
    <ImageButton android:id="@id/stop" android:background="@drawable/bg_transparent_dark_background" android:padding="8.0dip" android:layout_width="52.0dip" android:layout_height="52.0dip" android:layout_marginTop="@dimen/control_fragment_progress_thickness" android:tint="@android:color/white" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/play_pause" android:layout_alignParentEnd="true" android:tintMode="src_in" app:srcCompat="@drawable/ic_stop" />
</RelativeLayout>